# zero-ai-assisted-dev-project-template

./: .gitignore  README.md  cli.py  pyproject.toml
docs/: 00projectanchor-liftsim.md  00projectanchor-template.md  CONTENTS.md  main_notes_adding_wiki_articles.md  main_notes_as_a_human_how_to_code_with_codex.md  main_notes_best_practices_coding_with_codex.md  main_notes_codex_must_read_this_rules_for_codex.md  main_notes_devplan.md  main_notes_docstring_style_guide.md  main_notes_for_codex_update_toc.md  main_notes_styleguide_wiki_articles.md  main_notes_wiki_article_creation_for_codex.md  next-condition 0c44bdae.md  prompt0-frequent-heart-9190f354.md  prompt0_frequent_heart_9190f354.md  prompt1-normal-associate-763211a8.md  prompt2-apathetic-fall-6ad38cd4.md  unnamed-worthless-vacation-782e571a.md
primary_module/: helpers.py  pandas_ext.py
zero_aidev_framework/: cli.py  git_tools.py  helpers.py  main.py
