[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "test-project"
version = "0.1.0"
authors = [{name = "Project Name", email = "example@example.com"}]
description = "Project Description"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "GitPython",
    "jinja2>=3.0",
    "codenamize",
    "pytest",
    "pandas",
    "matplotlib",
]

[project.scripts]
#zero-liftsim = "zero_liftsim.cli:main"
zero-liftsim = "package_name.cli:main"

[tool.setuptools.packages.find]
include = ["package_name"]
